--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,20 @@
     <title>Odin To Do List</title>
 </head>
 <body>
-    
+    <header>
+        <p id="page-title">The Odin Project To Do List App</p>
+    </header>
+    <div class="main">
+        <p id="sub-title">All Projects</p>
+        <div class="content-container">
+            <div class="project">
+                <div class="project-text">
+                    <p class="project-title">Default Project</p>
+                    <p class="project-description">This is the default project present when the user first runs the app.</p>
+                </div>
+                <button class="project-button">Open</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
