Update webpack and add new project UI
added html img compatibility with webpack. Added a new project button
and more styling.

--- a/src/template.html
+++ b/src/template.html
@@ -19,6 +19,9 @@
                 </div>
                 <button class="project-button">Open</button>
             </div>
+            <div class="project new-project">
+                <img id="add" src="./images/add.svg" alt="new project">
+            </div>
         </div>
     </div>
 </body>
