Render all projects page via JavaScript

--- a/src/template.html
+++ b/src/template.html
@@ -10,18 +10,8 @@
         <p id="page-title">The Odin Project To Do List App</p>
     </header>
     <div class="main">
-        <p id="sub-title">All Projects</p>
+        <p id="sub-title"></p>
         <div class="content-container">
-            <div class="project">
-                <div class="project-text">
-                    <p class="project-title">Default Project</p>
-                    <p class="project-description">This is the default project present when the user first runs the app.</p>
-                </div>
-                <button class="project-button">Open</button>
-            </div>
-            <div class="project new-project">
-                <img id="add" src="./images/add.svg" alt="new project">
-            </div>
         </div>
     </div>
 </body>
