Add task viewing functionality
By opening a project the project tasks are now visible. A back button
also appears, bringing the user back to the project overview page.
The project display functions were moved to index.js for this to work.

--- a/src/template.html
+++ b/src/template.html
@@ -10,8 +10,12 @@
         <p id="page-title">The Odin Project To Do List App</p>
     </header>
     <div class="main">
-        <p id="sub-title"></p>
+        <div class="main-header">
+            <p id="sub-title">Default Project Tasks</p>
+        </div>
+       
         <div class="content-container">
+            
         </div>
     </div>
 </body>
