--- a/src/template.html
+++ b/src/template.html
@@ -6,12 +6,60 @@
     <title>Odin To Do List</title>
 </head>
 <body>
+    <dialog id="project-dialog">
+        <form>
+            <div class="dialogFlexContainer">
+                <p class="dialogTitle">New Project</p>
+                <div class="dialogDiv titleDiv">
+                    <label for="title">Title</label>
+                    <input type="text" name="title" id="title">
+                </div>
+                <div class="dialogDiv descDiv">
+                    <label for="desc-input">Description</label>
+                    <textarea name="desc-input" id="desc-input" rows="4"></textarea>
+                </div>
+                <div class="dialogFooter">
+                    <button formmethod="dialog" class="dialogButton" id="project-cancel">Cancel</button>
+                    <button class="dialogButton" id="project-submit">Enter</button>
+                </div>
+            </div>
+        </form>
+    </dialog>
+    <dialog id="task-dialog">
+        <form>
+            <div class="dialogFlexContainer">
+                <p class="dialogTitle">New Task</p>
+                <div class="dialogDiv titleDiv">
+                    <label for="title">Title</label>
+                    <input type="text" name="title" id="title">
+                </div>
+                <div class="dialogDiv authorDiv">
+                    <label for="author">Author</label>
+                    <input type="text" name="author" id="author">
+                </div>
+                <div class="dialogBundle">
+                    <div class="dialogDiv pagesDiv">
+                        <label for="pages">Pages:</label>
+                        <input type="number" name="pages" id="pages">
+                    </div>
+                    <div class="dialogDiv readDiv">
+                        <input type="checkbox" name="read" id="read">
+                        <label for="read">Read Before?</label>
+                    </div>
+                </div>
+                <div class="dialogFooter">
+                    <button formmethod="dialog" class="dialogButton" id="cancelBook">Cancel</button>
+                    <button class="dialogButton" id="submitBook">Enter</button>
+                </div>
+            </div>
+        </form>
+    </dialog>
     <header>
         <p id="page-title">The Odin Project To Do List App</p>
     </header>
     <div class="main">
         <div class="main-header">
-            <p id="sub-title">Default Project Tasks</p>
+            <p id="sub-title"></p>
         </div>
        
         <div class="content-container">
